# SNNTraining

./: .env.example  .gitignore  CITATION.cff  LICENSE  README.md  config.yaml  demo.py  main.py  pyproject.toml  requirements.txt  train.py  utils.py
configs/: default.yaml
core/: __init__.py  kernel.c  kernel_bridge.py  logging.py  model_utils.py  realtime.py
data/: __init__.py  loaders.py  preprocessing.py  radioml.py  synthetic.py
experiments/: ablations.py  arthedain_robustness.py  baselines.py  bci_decoding.py  benchmark_energy.py  benchmark_neuromorphic.py  benchmark_sequential_mnist.py  benchmark_speed.py  compare_classifiers.py  compare_learning_methods.py  compile_fault_sweep.py  ecc_fault_recovery.py  energy_benchmarks.py  force2_benchmark.py  hdc_graph_memory.py  hdc_model_fusion.py  hdc_robustness.py  hva_composition_demo.py  multi_int_demo.py  one_shot_demo.py  pc_ablation.py  seed_benchmark.py  supply_chain.py  sweep_fault_types.sh  threat_detection.py
hdc/: __init__.py  accuracy_booster.py  active_inference.py  adaptive_encoder.py  advanced.py  adversarial_robustness.py  analogy.py  attention.py  autoassociative_memory.py  autoencoder_bridge.py  benchmark.py  binary_hdc_tradeoffs.py  ca_hdc.py  category_algebra.py  causal_discovery.py  chip_architecture.py  cim_hamming.py  cleanup_memory.py  cognitive_map.py  compositional.py  concentration.py  continual_hdc.py  curiosity.py  deployment_export.py  drone_control.py  dual_encoding.py  ecc.py  efficiency.py  error_masking.py  event_hdc.py  fault_models.py  fault_pipeline.py  fefet_hdc.py  flyhash.py  (+78 more)
(+101 files in other folders)
