[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "snntraining"
version = "1.0.0"
description = "Train spiking neural networks without backpropagation"
readme = "README.md"
license = { text = "MIT" }
authors = [{ name = "Aidistides" }]
keywords = ["spiking neural network", "online learning", "neuromorphic", "BCI", "HDC"]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
requires-python = ">=3.10"
dependencies = [
    "torch>=2.0.0",
    "numpy>=1.24.0",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
dev = ["pytest>=7.0", "pytest-cov", "matplotlib>=3.7"]
datasets = ["scipy>=1.10", "h5py>=3.8"]

[project.scripts]
snntraining = "arthedain.__main__:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["arthedain*", "models*", "training*", "data*", "hardware*", "hdc*", "sensors*", "core*"]
exclude = ["tests*", "experiments*", "notebooks*", "results*", "checkpoints*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short"
pythonpath = [".", ".."]

[tool.coverage.run]
source = ["arthedain", "models", "training"]
omit = ["*/tests/*", "*/__main__.py"]
